--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>memory-game</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div class="font-preload">font-preload</div>
     <script defer type="module" src="/src/main.js"></script>
   </body>
 </html>
